--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -150,16 +150,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "7958a32b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter the student's score: 100\n",
-      "The student's letter grade is: A\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1428964776.py, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31melif score>=70:\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
      ]
     }
    ],
@@ -171,6 +171,7 @@
     "    score = float(score)\n",
     "    if score<0 or score>100:\n",
     "        print(\"The score must be within the range 0-100!\")\n",
+    "    score = int(score)\n",
     "    elif score>=70:\n",
     "        print(\"The student's letter grade is: A\")\n",
     "    elif score>=50:\n",
