--- a/3.1_storing_data/storing_data_(need).ipynb
+++ b/3.1_storing_data/storing_data_(need).ipynb
@@ -39,17 +39,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d8d84ab0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
+    "#python lists:\n",
     "py_super_names = [\"Black Widow\", \"Iron Man\", \"Doctor Strange\"]\n",
     "py_real_names = [\"Natasha Romanoff\", \"Tony Stark\", \"Stephen Strange\"]\n",
     "\n",
-    "#array:\n",
+    "#numpy arrays:\n",
     "np_super_names = np.array([\"Black Widow\", \"Iron Man\", \"Doctor Strange\"])\n",
-    "np_real_names = np.array([\"Natasha Romanoff\", \"Tony Stark\", \"Stephen Strange\"])"
+    "np_real_names = np.array([\"Natasha Romanoff\", \"Tony Stark\", \"Stephen Strange\"])\n",
+    "\n",
+    "#dictionary:\n",
+    "superhero_info = {\n",
+    "    \"Natasha Romanoff\": \"Black Widow\",\n",
+    "    \"Tony Stark\": \"Iron Man\",\n",
+    "    \"Stephen Strange\": \"Doctor Strange\"\n",
+    "}"
    ]
   },
   {
@@ -71,6 +81,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b0bf419a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff\n",
+      "Black Widow\n",
+      "Doctor Strange\n",
+      "Doctor Strange\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(py_real_names[0])\n",
+    "print(py_super_names[0])\n",
+    "print(py_super_names[2])    # Forward indexing\n",
+    "print(py_super_names[-1])   # Reverse indexing (we need to know the length of the list beforehand)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "123456",
@@ -80,12 +114,85 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "93840ffc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Black Widow\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(superhero_info[\"Natasha Romanoff\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "60609b6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Natasha Romanoff', 'Tony Stark', 'Stephen Strange'])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "superhero_info.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e09e482e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values(['Black Widow', 'Iron Man', 'Doctor Strange'])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "superhero_info.values()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "123456",
    "metadata": {},
    "source": [
     "## 1.4 Higher dimensional lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c2903b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2D list\n",
+    "py_superhero_info = [['Natasha Romanoff', 'Black Widow'],\n",
+    "                     ['Tony Stark', 'Iron Man'],\n",
+    "                     ['Stephen Strange', 'Doctor Strange']]"
    ]
   },
   {
@@ -107,12 +214,126 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "26b47061",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py_list_2d = [[1, \"A\"], [2, \"B\"], [3, \"C\"], [4, \"D\"],\n",
+    "              [5, \"E\"], [6, \"F\"], [7, \"G\"], [8, \"H\"],\n",
+    "              [9, \"I\"], [10, \"J\"]]\n",
+    "len(py_list_2d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f24abfea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_array_2d = np.array(py_list_2d)\n",
+    "len(np_array_2d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3c1ac922",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, 2)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# shape attribute of the numpy array\n",
+    "np_array_2d.shape"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "123456",
    "metadata": {},
    "source": [
     "## 2.2 Arrays are fussy about type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "fef90f28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1.5, 'A']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# arrays can only have a single data type, unlike lists\n",
+    "py_list = [1, 1.5, 'A']\n",
+    "np_array = np.array(py_list)\n",
+    "\n",
+    "py_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1285dd9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['1', '1.5', 'A'], dtype='<U32')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_array"
    ]
   },
   {
@@ -125,12 +346,84 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2442bfd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([11, 12, 13, 14, 15])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py_list = [1, 2, 3, 4, 5]\n",
+    "np_array = np.array(py_list)\n",
+    "np_array + 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e3b1ec4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate list (not \"int\") to list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mpy_list\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m10\u001b[39;49m        \u001b[38;5;66;03m# Won't work!\u001b[39;00m\n",
+      "\u001b[31mTypeError\u001b[39m: can only concatenate list (not \"int\") to list"
+     ]
+    }
+   ],
+   "source": [
+    "py_list + 10        # Won't work!"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "123456",
    "metadata": {},
    "source": [
     "## 2.4 Adding another list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "48145ca3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 10, 20, 30, 40, 50]\n",
+      "[11 22 33 44 55]\n"
+     ]
+    }
+   ],
+   "source": [
+    "py_list_1 = [1, 2, 3, 4, 5]\n",
+    "py_list_2 = [10, 20, 30, 40, 50]\n",
+    "\n",
+    "np_array_1 = np.array(py_list_1)\n",
+    "np_array_2 = np.array(py_list_2)\n",
+    "\n",
+    "# adding lists causes them to grow, adding arrays is an element-wise operation\n",
+    "print(py_list_1 + py_list_2)\n",
+    "print(np_array_1 + np_array_2)"
    ]
   },
   {
@@ -143,12 +436,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "871b5176",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 1, 2, 3, 4, 5]\n",
+      "[ 2  4  6  8 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "py_list = [1, 2, 3, 4, 5]\n",
+    "np_array = np.array(py_list)\n",
+    "\n",
+    "print(py_list*2)\n",
+    "print(np_array*2)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "123456",
    "metadata": {},
    "source": [
     "## 2.6 Squaring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "09f7ce43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  4,  9, 16, 25])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_array**2\n",
+    "# won't work for lists though"
    ]
   },
   {
@@ -161,12 +499,135 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "da339502",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py_list == 3     # checks if the entire object py_list is equal to 3 (which is not true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2766f282",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'>' not supported between instances of 'list' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[30]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mpy_list\u001b[49m\u001b[43m \u001b[49m\u001b[43m>\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m3\u001b[39;49m      \u001b[38;5;66;03m# Won't work!\u001b[39;00m\n",
+      "\u001b[31mTypeError\u001b[39m: '>' not supported between instances of 'list' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "py_list > 3      # Won't work!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "367a7fa5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False,  True, False, False])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_array == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "3084cfdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False,  True,  True])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_array > 3"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "123456",
    "metadata": {},
    "source": [
     "## 2.8 Mathematics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af51aa49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "5\n",
+      "1\n",
+      "15\n",
+      "5\n",
+      "1\n",
+      "3.0\n",
+      "1.4142135623730951\n"
+     ]
+    }
+   ],
+   "source": [
+    "# base python functions:\n",
+    "print(sum(py_list))\n",
+    "print(max(py_list))\n",
+    "print(min(py_list))\n",
+    "# py_list.sum doesn't work\n",
+    "\n",
+    "print(np_array.sum())\n",
+    "print(np_array.max())\n",
+    "print(np_array.min())\n",
+    "print(np_array.mean())\n",
+    "print(np_array.std())\n",
+    "\n",
+    "# an operation on a list works on the whole list.\n",
+    "# In contrast, an operation on an array works on the individual elements of the array."
    ]
   },
   {
